[package]
name = "ls"
version = "0.1.0"
authors = ["Pablo Cumpián <pablocumpian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
libc = "0.2"
users = "0.11"